// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainLayout component snapshot 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    alignItems="center"
    justifyContent="space-between"
    paddingHorizontalRatio={3}
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingHorizontal": 22.5,
          "paddingVertical": 0,
          "width": "100%",
        },
        [
          {
            "alignItems": "flex-start",
            "backgroundColor": "#fff",
            "paddingBottom": 40.019999999999996,
            "paddingTop": 26.68,
            "shadowColor": "rgba(68, 80, 95, 0.20)",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 1,
            "width": 750,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      fullWidth={false}
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingHorizontal": 0,
            "paddingVertical": 0,
          },
          undefined,
        ]
      }
    >
      <SvgMock
        fill="#0071F3"
      />
    </View>
    <Text
      style={
        [
          {
            "color": "#2A333D",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 16,
            "marginLeft": 0,
            "marginTop": 0,
            "textAlign": "center",
            "textAlignVertical": "center",
          },
          undefined,
        ]
      }
      typography="semiBold16"
    >
      Your Title
    </Text>
    <View
      fullWidth={false}
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingHorizontal": 0,
            "paddingVertical": 0,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "paddingHorizontal": 30,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`MainLayout component snapshot with close button and custom right icon 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    alignItems="center"
    justifyContent="space-between"
    paddingHorizontalRatio={3}
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingHorizontal": 22.5,
          "paddingVertical": 0,
          "width": "100%",
        },
        [
          {
            "alignItems": "flex-start",
            "backgroundColor": "#fff",
            "paddingBottom": 40.019999999999996,
            "paddingTop": 26.68,
            "shadowColor": "rgba(68, 80, 95, 0.20)",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 1,
            "width": 750,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      fullWidth={false}
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingHorizontal": 0,
            "paddingVertical": 0,
          },
          undefined,
        ]
      }
    >
      <SvgMock
        fill="#0071F3"
      />
    </View>
    <Text
      style={
        [
          {
            "color": "#2A333D",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 16,
            "marginLeft": 0,
            "marginTop": 0,
            "textAlign": "center",
            "textAlignVertical": "center",
          },
          undefined,
        ]
      }
      typography="semiBold16"
    />
    <View
      fullWidth={false}
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingHorizontal": 0,
            "paddingVertical": 0,
          },
          undefined,
        ]
      }
    >
      <svg>
        Custom Icon
      </svg>
    </View>
  </View>
  <View
    style={
      [
        {
          "paddingHorizontal": 30,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`MainLayout component snapshot with logo 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    alignItems="center"
    justifyContent="space-between"
    paddingHorizontalRatio={3}
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingHorizontal": 22.5,
          "paddingVertical": 0,
          "width": "100%",
        },
        [
          {
            "alignItems": "flex-start",
            "backgroundColor": "#fff",
            "paddingBottom": 40.019999999999996,
            "paddingTop": 26.68,
            "shadowColor": "rgba(68, 80, 95, 0.20)",
            "shadowOffset": {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 1,
            "width": 750,
          },
          undefined,
        ],
      ]
    }
  >
    <View
      fullWidth={false}
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingHorizontal": 0,
            "paddingVertical": 0,
          },
          undefined,
        ]
      }
    >
      <SvgMock
        fill="#0071F3"
      />
    </View>
    <Text
      style={
        [
          {
            "color": "#2A333D",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 16,
            "marginLeft": 0,
            "marginTop": 0,
            "textAlign": "center",
            "textAlignVertical": "center",
          },
          undefined,
        ]
      }
      typography="semiBold16"
    >
      <SvgMock />
    </Text>
    <View
      fullWidth={false}
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "paddingHorizontal": 0,
            "paddingVertical": 0,
          },
          undefined,
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "paddingHorizontal": 30,
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`MainLayout component snapshot without header 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "paddingHorizontal": 30,
        },
        undefined,
      ]
    }
  />
</View>
`;
